tests/snapshots/integration__invalid_autonumber_bad_format_token_reports_diagnostic.snap
---
source: tests/integration.rs
expression: stderr
---
<fixture>:2:1: error[E_AUTONUMBER_FORMAT_UNSUPPORTED]: unsupported autonumber syntax; expected `autonumber [start] [increment] [format]` or `autonumber resume [increment] [format]`
autonumber 10 2 extra1 extra2
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
